<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/d_pot_de_bennes"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/modifierInfoUtilisateur"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/modifier_les_informations_de_l_utilisateur"
        app:layout_constraintBottom_toTopOf="@+id/modifierInfoDestinataire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/modifierInfoDestinataire"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/modifier_les_informations_du_destinataire"
        app:layout_constraintBottom_toTopOf="@+id/envoieNouvelleBenne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifierInfoUtilisateur" />

    <Button
        android:id="@+id/envoieNouvelleBenne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/envoyer_une_nouvelle_benne"
        app:layout_constraintBottom_toTopOf="@+id/MAP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifierInfoDestinataire" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="159dp"
        android:contentDescription="@string/image_presesntation"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonScanBarcode"
        tools:src="@drawable/image_illustration" />

    <Button
        android:id="@+id/MAP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/envoieNouvelleBenne" />


    <Button
        android:id="@+id/buttonTakePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/take_barcode_picture"
        app:layout_constraintBottom_toTopOf="@+id/buttonScanBarcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button

        android:id="@+id/buttonScanBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_barcode"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTakePicture" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_code_scanned_results_automatically_copied_to_your_clipboard_you_just_paste_it_in_the_browser_or_use_it_in_any_place_where_ever_you_want"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/modifierInfoUtilisateur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</android.support.constraint.ConstraintLayout>